--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -72,14 +72,26 @@
             </ul>
         </div>
         -->
-        <div class="center">
-            <h1>The Master's</h1><br>
-            <h5>Leading To Tastier World</h5> <br>
-            <a href="#Idea"><button class="btn">Learn More </button></a>
-            <div class="arrow">
-                <span></span>
-                <span></span>
-                <span></span>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                    <img src="images\Balsamic Steak Gorgonzola Salad with Grilled Corn.jpg">
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                    <div class="cneter">
+                        <h1>The Master's</h1><br>
+                        <h5>Leading To Tastier World</h5> <br>
+                        <a href="#Idea"><button class="btn">Learn More </button></a>
+                        <div class="arrow">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                    <img src="images\Swiss House _ سويس هاوس.jpg">
+                </div>
             </div>
         </div>
     </section>
@@ -128,23 +140,28 @@
 
 
     <section id="About">
-        <div class="aboutheader">
-            <h1>Who Are We</h1> <br>
-            <p>Our company was founded in 1999 with the goal of training people to cook like the best chefs in the world. <br> 
-                Together with our team of experts we have built a number of meals by categories and by difficulty levels. <br>
-                 The company's vision is to produce a world - renowned Israeli cuisine. </p> <br>
-            <p>We Hope you enjoy our website and bring good food to the world.
-                Old guy said: "Bring man a fish, he want be hungry for a day. Teach him how to fish he won't be hungry for life </p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="order-2 col-xl-6 order-2 col-md-12 order-1">
+                    <h1>Who Are We</h1> <br>
+                    <p>Our company was founded in 1999 with the goal of training people to cook like the best chefs in the world. <br> 
+                        Together with our team of experts we have built a number of meals by categories and by difficulty levels. <br>
+                        The company's vision is to produce a world - renowned Israeli cuisine. </p> <br>
+                    <p>We Hope you enjoy our website and bring good food to the world.
+                        Old guy said: "Bring man a fish, he want be hungry for a day. Teach him how to fish he won't be hungry for life </p>
 
+                </div>
+                <div class="order-1 col-xl-6 order-1  col-md-12 order-2">
+                    <form class="newsForm">      
+                        <h1 style="color: #CC4949; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Join Our Newsletter <i class="fa-solid fa-paper-plane"></i></h1> <br>
+                        <input name="name" type="text" class="feedback-input" placeholder="Full Name" />   
+                        <input name="email" type="text" class="feedback-input" placeholder="Email" />
+                        <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+                        <input type="submit" value="SUBMIT"/>
+                    </form>
+                </div>
+            </div>
         </div>
-        <form class="newsForm">      
-            <h1 style="color: #CC4949; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Join Our Newsletter <i class="fa-solid fa-paper-plane"></i></h1> <br>
-            <input name="name" type="text" class="feedback-input" placeholder="Full Name" />   
-            <input name="email" type="text" class="feedback-input" placeholder="Email" />
-            <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-            <input type="submit" value="SUBMIT"/>
-          </form>
-        
     </section>
 
 </body>
