--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -73,12 +73,12 @@
         </div>
         -->
         <div class="container-fluid">
-            <div class="row">
+            <div class="row rowwidth">
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                    <img src="images\Balsamic Steak Gorgonzola Salad with Grilled Corn.jpg">
+                    <img class="img-me" src="images\cookie-recipes.jpg">
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                    <div class="cneter">
+                    <div class="img-me center">
                         <h1>The Master's</h1><br>
                         <h5>Leading To Tastier World</h5> <br>
                         <a href="#Idea"><button class="btn">Learn More </button></a>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                    <img src="images\Swiss House _ سويس هاوس.jpg">
+                    <img class="img-me" src="images\Swiss House _ سويس هاوس.jpg">
                 </div>
             </div>
         </div>
