--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -43,44 +43,15 @@
     </nav>
     
     <section id="home">
-     <!--
-        <div class="header">
-            <a href="#home" class="logo">
-                <img src="../images/Healthy Food Logo With Plate Spoon And Fork Line Art Template Download on Pngtree.jpg" alt=""width="80" height="80">
-                <div class="iconbar"> 
-                    <a href="www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="www.instergram.com"><i class="fa-brands fa-instagram-square"></i></a>
-                    <a href="mailto:tomer233@hotmail.com"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="www.youtube.com"><i class="fa-brands fa-youtube"></i></i></a>
-                </div>
-            </a>
-            <ul id="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#Idea">Idea</a></li>
-                <li><a href="#About">About Us</a></li>
-                <li><div class="dropdown">
-                        <button class="dropbtn">Recipes</button>
-                        <div class="dropdown-content">
-                        <a href="#">Mexican</a>
-                        <a href="#">Italian</a>
-                        <a href="#">Israeli</a>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="Tips_page.html">Tips</a></li>
-                <li><a href="#">Search...</a></li>
-            </ul>
-        </div>
-        -->
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                    <img class="img-me" src="images\cookie-recipes.jpg">
+                    <img class="img-me" src="images\Milk-Clarified Tropical Gin Cocktail with Hibiscus & Caramelized Bananas.jpg">
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                     <div class="img-me center">
-                        <h1>The Master's</h1><br>
-                        <h5>Leading To Tastier World</h5> <br>
+                        <h1>The Master's</h1>
+                        <h5>Leading To Tastier World</h5>
                         <a href="#Idea"><button class="btn">Learn More </button></a>
                         <div class="arrow">
                             <span></span>
@@ -90,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                    <img class="img-me" src="images\Swiss House _ سويس هاوس.jpg">
+                    <img class="img-me" src="images\Sabich - vegetarischer Streetfood Sandwich Klassiker aus Israel.png">
                 </div>
             </div>
         </div>
@@ -142,7 +113,7 @@
     <section id="About">
         <div class="container-fluid">
             <div class="row">
-                <div class="order-2 col-xl-6 order-2 col-md-12 order-1">
+                <div class="col-xl-6 col-md-12">
                     <h1>Who Are We</h1> <br>
                     <p>Our company was founded in 1999 with the goal of training people to cook like the best chefs in the world. <br> 
                         Together with our team of experts we have built a number of meals by categories and by difficulty levels. <br>
@@ -151,7 +122,7 @@
                         Old guy said: "Bring man a fish, he want be hungry for a day. Teach him how to fish he won't be hungry for life </p>
 
                 </div>
-                <div class="order-1 col-xl-6 order-1  col-md-12 order-2">
+                <div class="col-xl-6 col-md-12">
                     <form class="newsForm">      
                         <h1 style="color: #CC4949; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Join Our Newsletter <i class="fa-solid fa-paper-plane"></i></h1> <br>
                         <input name="name" type="text" class="feedback-input" placeholder="Full Name" />   
