omri fix navbar

--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -31,7 +31,7 @@
                                     <li><a href="#About">About Us</a></li>
                                     <li class="services">
                                         <a>Recipes</a>
-                                        <ul class="dropdown">
+                                        <ul class="dropdown1">
                                             <li><a href="#">Mexican</a></li>
                                             <li><a href="#">Italian</a></li>
                                             <li><a href="#">Israeli</a></li>
