work on recepies omri

--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -32,7 +32,7 @@
                                     <li class="services">
                                         <a>Recipes</a>
                                         <ul class="dropdown1">
-                                            <li><a href="#">Mexican</a></li>
+                                            <li><a href="Recipes_page.html">Mexican</a></li>
                                             <li><a href="#">Italian</a></li>
                                             <li><a href="#">Israeli</a></li>
                                         </ul>
