omri update recepies

--- a/Recipes_page.html
+++ b/Recipes_page.html
@@ -61,22 +61,23 @@
     </section>
 
     <section id="info">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row ">
-                <div class="col-xl-4 col-lg-6 col-md-12 box">
-                    <img class="img-me" src="images\Ingredients1.jpg" alt="firstmeal">
+                <div class="col-xl-4 col-lg-12 col-md-12 box">
+                    <i class="fa-solid fa-clock"></i>
                     <h6>Ingredients</h6> 
                     <p>amount</p>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-12  box">
-                    <img class="img-me" src="images\time1.png" alt="firstmeal">
+                <div class="col-xl-4 col-lg-12 col-md-12 box">
+                    <i class="fa-solid fa-clock"></i>
                     <h6>Total time</h6>
                     <p>time</p>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty1.png" alt="firstmeal">
+                <div class="col-xl-4 col-lg-12 col-md-12 box">
+                    <i class="fa-solid fa-stairs"></i>
                     <h6>Difficulty</h6> 
                     <p>description</p>
+                </div>
                 
             </div>
         </div>
