--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -8,8 +8,22 @@
     <title>The Master's page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/82bc52e7cb.js" crossorigin="anonymous"></script>
+    <script>
+        function sendform() {
+            const form = new FormData(document.getElementById('contentForm'));
+            const req = new Request('/index.php');
+            fetch(req, {
+                method: 'POST',
+                body: form
+            }).then((response)=>{
+                response.text().then((text)=>{
+                    alert(text);
+                })
+            })
+        }
+    </script>
 </head>
-<script src="https://kit.fontawesome.com/82bc52e7cb.js" crossorigin="anonymous"></script>
 
 
 <body>
@@ -141,12 +155,13 @@
 
                 </div>
                 <div class="col-xl-6 col-md-12">
-                    <form class="newsForm" method="POST" action="newsform.php">      
+                    <form class="newsForm" id="contentForm">      
                         <h1 style="color: #CC4949; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Join Our Newsletter <i class="fa-solid fa-paper-plane"></i></h1> <br>
-                        <input name="name" type="text" class="feedback-input" placeholder="Full Name" />   
-                        <input name="email" type="text" class="feedback-input" placeholder="Email" />
-                        <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-                        <input type="submit" value="SUBMIT"/>
+                        <input name="FullName" type="text" class="feedback-input" placeholder="Full Name" />   
+                        <input name="Email" type="text" class="feedback-input" placeholder="Email" />
+                        <textarea name="Subject" class="feedback-input" placeholder="Subject"></textarea>
+                        <button type="button" onclick='sendform()'> Send </button>
+                        <input type="hidden" name="action" value="addContent">
                     </form>
                 </div>
             </div>
