--- a/Tips_page.html
+++ b/Tips_page.html
@@ -50,7 +50,7 @@
         </script>
         <div class="container">
             <div class="row rowwidth">
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 column">
                     <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
                     <h1>SALT</h1>
                     <p>If your food is tasteless,<br> salt will always save the day</p><br>
@@ -63,7 +63,7 @@
                         <a href="#popup1" class="fas fa-star s5"></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 column">
                     <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
                     <h1>SALT</h1>
                     <p>If your food is tasteless,<br> salt will always save the day</p><br>
@@ -74,23 +74,9 @@
                         <a href="#popup1" class="fas fa-star s3"></a>
                         <a href="#popup1" class="fas fa-star s4"></a>
                         <a href="#popup1" class="fas fa-star s5"></a>
-                          <div class="wraper">
-                            <script type="text/javascript" data-name="bmc-button" data-slug="gitlabBilal" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff"></script>
-                          </div>
-                          <div id="popup1" class="overlay">
-                            <div class="popup">
-                                <h2>Thanks For Support Us</h2> <br>
-                                <a class="close" href="#Tips">&times;</a>
-                                <form class="RankForm">  
-                                    <textarea name="text" class="feedback-input" placeholder="Please Help Us Get Better"></textarea>
-                                    <input type="submit" value="SUBMIT"/>
-                                </form>
-                                    
-                                </div>
-                            </div>
                         </div>
                     </div>
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 column">
                     <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
                     <h1>SALT</h1>
                     <p>If your food is tasteless,<br> salt will always save the day</p><br>
@@ -101,20 +87,88 @@
                         <a href="#popup1" class="fas fa-star s3"></a>
                         <a href="#popup1" class="fas fa-star s4"></a>
                         <a href="#popup1" class="fas fa-star s5"></a>
-                          <div class="wraper">
-                            <script type="text/javascript" data-name="bmc-button" data-slug="gitlabBilal" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff"></script>
-                          </div>
-                          <div id="popup1" class="overlay">
-                            <div class="popup">
-                                <h2>Thanks For Support Us</h2> <br>
-                                <a class="close" href="#Tips">&times;</a>
-                                <form class="RankForm">  
-                                    <textarea name="text" class="feedback-input" placeholder="Please Help Us Get Better"></textarea>
-                                    <input type="submit" value="SUBMIT"/>
-                                </form>
-                                    
-                                </div>
-                            </div>
+                        </div>
+                    </div>
+            </div>
+            <div class="row rowwidth">
+                <div class="col-lg-4 col-md-12 column">
+                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
+                    <h1>SALT</h1>
+                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <div class="Ranking_artical">
+                        <p> Rank this Tip</p>
+                        <a href="#popup1" class="fas fa-star s1"></a>
+                        <a href="#popup1" class="fas fa-star s2"></a>
+                        <a href="#popup1" class="fas fa-star s3"></a>
+                        <a href="#popup1" class="fas fa-star s4"></a>
+                        <a href="#popup1" class="fas fa-star s5"></a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 column">
+                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
+                    <h1>SALT</h1>
+                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <div class="Ranking_artical">
+                        <p> Rank this Tip</p>
+                        <a href="#popup1" class="fas fa-star s1"></a>
+                        <a href="#popup1" class="fas fa-star s2"></a>
+                        <a href="#popup1" class="fas fa-star s3"></a>
+                        <a href="#popup1" class="fas fa-star s4"></a>
+                        <a href="#popup1" class="fas fa-star s5"></a>
+                        </div>
+                    </div>
+                <div class="col-lg-4 col-md-12 column">
+                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
+                    <h1>SALT</h1>
+                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <div class="Ranking_artical">
+                        <p> Rank this Tip</p>
+                        <a href="#popup1" class="fas fa-star s1"></a>
+                        <a href="#popup1" class="fas fa-star s2"></a>
+                        <a href="#popup1" class="fas fa-star s3"></a>
+                        <a href="#popup1" class="fas fa-star s4"></a>
+                        <a href="#popup1" class="fas fa-star s5"></a>
+                        </div>
+                    </div>
+            </div>
+            <div class="row rowwidth">
+                <div class="col-lg-4 col-md-12 column">
+                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
+                    <h1>SALT</h1>
+                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <div class="Ranking_artical">
+                        <p> Rank this Tip</p>
+                        <a href="#popup1" class="fas fa-star s1"></a>
+                        <a href="#popup1" class="fas fa-star s2"></a>
+                        <a href="#popup1" class="fas fa-star s3"></a>
+                        <a href="#popup1" class="fas fa-star s4"></a>
+                        <a href="#popup1" class="fas fa-star s5"></a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 column">
+                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
+                    <h1>SALT</h1>
+                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <div class="Ranking_artical">
+                        <p> Rank this Tip</p>
+                        <a href="#popup1" class="fas fa-star s1"></a>
+                        <a href="#popup1" class="fas fa-star s2"></a>
+                        <a href="#popup1" class="fas fa-star s3"></a>
+                        <a href="#popup1" class="fas fa-star s4"></a>
+                        <a href="#popup1" class="fas fa-star s5"></a>
+                        </div>
+                    </div>
+                <div class="col-lg-4 col-md-12 column">
+                    <img class="img-me" src="../images/first mealjpg.jpg" alt="firstmeal">
+                    <h1>SALT</h1>
+                    <p>If your food is tasteless,<br> salt will always save the day</p><br>
+                    <div class="Ranking_artical">
+                        <p> Rank this Tip</p>
+                        <a href="#popup1" class="fas fa-star s1"></a>
+                        <a href="#popup1" class="fas fa-star s2"></a>
+                        <a href="#popup1" class="fas fa-star s3"></a>
+                        <a href="#popup1" class="fas fa-star s4"></a>
+                        <a href="#popup1" class="fas fa-star s5"></a>
                         </div>
                     </div>
             </div>
