--- a/Tips_page.html
+++ b/Tips_page.html
@@ -56,11 +56,29 @@
                     <p>If your food is tasteless,<br> salt will always save the day</p><br>
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
-                        <a href="#popup1" class="fas fa-star s1"></a>
-                        <a href="#popup1" class="fas fa-star s2"></a>
-                        <a href="#popup1" class="fas fa-star s3"></a>
-                        <a href="#popup1" class="fas fa-star s4"></a>
-                        <a href="#popup1" class="fas fa-star s5"></a>
+                        <a href="#popup1" class="fas fa-star s1" data-bs-toggle="modal" data-bs-target="#exampleModal"></a>
+                        <a href="#popup1" class="fas fa-star s2" data-bs-toggle="modal" data-bs-target="#exampleModal"></a>
+                        <a href="#popup1" class="fas fa-star s3" data-bs-toggle="modal" data-bs-target="#exampleModal"></a>
+                        <a href="#popup1" class="fas fa-star s4" data-bs-toggle="modal" data-bs-target="#exampleModal"></a>
+                        <a href="#popup1" class="fas fa-star s5" data-bs-toggle="modal" data-bs-target="#exampleModal"></a>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                            ...
+                            </div>
+                            <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
