--- a/Tips_page.html
+++ b/Tips_page.html
@@ -15,8 +15,8 @@
     <script>
         function sendform() {
             const form = new FormData(document.getElementById('TipsForm'));
-            form.append("name", JSON.parse(sessionStorage.getItem("tip")).name);
-            form.append("value", JSON.parse(sessionStorage.getItem("tip")).value);
+            form.append("name", JSON.parse(window.sessionStorage.getItem("tip")).name);
+            form.append("value", JSON.parse(window.sessionStorage.getItem("tip")).value);
             const req = new Request('/index.php');
             fetch(req, {
                 method: 'POST',
@@ -29,8 +29,8 @@
         }
 
         function saveTip(name, value) {
-            sessionStorage.clear();
-            sessionStorage.setItem("tip", JSON.stringify({
+            window.sessionStorage.clear();
+            window.sessionStorage.setItem("tip", JSON.stringify({
                 "name": name,
                 "value": value
             }));
@@ -89,15 +89,15 @@
                     <div class="Ranking_artical">
                         <p> Rank this Tip</p>
                         <label> <i class="fa-solid fa-star">5</i> <input type="radio" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal" onclick='saveTip("tip", 5)' name="5" /> </label>
+                                data-bs-target="#exampleModal" onclick='saveTip("tip1", 5)' name="5" /> </label>
                         <label> <i class="fa-solid fa-star">4</i><input type="radio" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal" onclick='saveTip("tip", 4)' name="4" /> </label>
+                                data-bs-target="#exampleModal" onclick='saveTip("tip1", 4)' name="4" /> </label>
                         <label> <i class="fa-solid fa-star">3</i><input type="radio" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal" onclick='saveTip("tip", 3)' name="3" /> </label>
+                                data-bs-target="#exampleModal" onclick='saveTip("tip1", 3)' name="3" /> </label>
                         <label> <i class="fa-solid fa-star">2</i><input type="radio" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal" onclick='saveTip("tip", 2)' name="2" /> </label>
+                                data-bs-target="#exampleModal" onclick='saveTip("tip1", 2)' name="2" /> </label>
                         <label> <i class="fa-solid fa-star">1</i><input type="radio" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal" onclick='saveTip("tip", 1)' name="1" /> </label>
+                                data-bs-target="#exampleModal" onclick='saveTip("tip1", 1)' name="1" /> </label>
                     </div>
                     <!-- Modal -->
                     <form method="post" action="" id="TipsForm">
