--- a/Israeli_page.html
+++ b/Israeli_page.html
@@ -23,25 +23,25 @@
                     <a href="www.instergram.com"><i class="fa-brands fa-instagram-square"></i></a>
                     <a href="mailto:tomer233@hotmail.com"><i class="fa-solid fa-envelope"></i></a>
                     <a href="www.youtube.com"><i class="fa-brands fa-youtube"></i></i></a>
-                </div>                
+                </div>
                 <ul class="col-xl-6 col-md-8 nav-links">
-                            <input type="checkbox" id="checkbox_toggle"/>
-                            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-                                <div class="menu">
-                                    <li><a href="#home">Home</a></li>
-                                    <li><a href="#Idea">Idea</a></li>
-                                    <li><a href="#About">About Us</a></li>
-                                    <li class="services">
-                                        <a>Recipes</a>
-                                        <ul class="dropdown1">
-                                            <li><a href="Recipes_page.html">Mexican</a></li>
-                                            <li><a href="#">Italian</a></li>
-                                            <li><a href="#">Israeli</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="Tips_page.html">Tips</a></li>
-                                    <li><a href="#">Search...</a></li>
-                                </div>
+                    <input type="checkbox" id="checkbox_toggle" />
+                    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                    <div class="menu">
+                        <li><a href="TheMasterswebsite.html">Home</a></li>
+                        <li><a href="TheMasterswebsite.html#Idea">Idea</a></li>
+                        <li><a href="TheMasterswebsite.html#About">About Us</a></li>
+                        <li class="services">
+                            <a>Recipes</a>
+                            <ul class="dropdown1">
+                                <li><a href="Mexican_page.html">Mexican</a></li>
+                                <li><a href="Italian_page.html">Italian</a></li>
+                                <li><a href="Israeli_page.html">Israeli</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="Tips_page.html">Tips</a></li>
+                        <li><a href="#">Search...</a></li>
+                    </div>
                 </ul>
             </nav>
         </div>
@@ -90,11 +90,11 @@
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapseOne" 
-            aria-expanded="true" aria-controls="collapseOne">
+            aria-expanded="false" aria-controls="collapseOne">
                 Ingredients
             </button>
           </h2>
-          <div id="collapseOne" class=" collapse show" 
+          <div id="collapseOne" class=" collapse " 
           aria-labelledby="headingOne" data-bs-parent="#Description">
             <div class="accordion-body">
                 hello world
@@ -105,11 +105,11 @@
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapseTwo" 
-              aria-expanded="true" aria-controls="collapseTwo">
+              aria-expanded="false" aria-controls="collapseTwo">
               preparation method
               </button>
             </h2>
-            <div id="collapseTwo" class=" collapse show" 
+            <div id="collapseTwo" class=" collapse" 
             aria-labelledby="headingTwo" data-bs-parent="#Description">
               <div class="accordion-body">
                   hello world
@@ -159,30 +159,30 @@
 
     <div class="accordion" id="Description">
         <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
+          <h2 class="accordion-header" id="heading3">
             <button class="accordion-button" type="button" 
-            data-bs-toggle="collapse" data-bs-target="#collapseOne" 
-            aria-expanded="true" aria-controls="collapseOne">
+            data-bs-toggle="collapse" data-bs-target="#collapse3" 
+            aria-expanded="false" aria-controls="collapse3">
                 Ingredients
             </button>
           </h2>
-          <div id="collapseOne" class=" collapse show" 
-          aria-labelledby="headingOne" data-bs-parent="#Description">
+          <div id="collapse3" class=" collapse " 
+          aria-labelledby="heading3" data-bs-parent="#Description">
             <div class="accordion-body">
                 hello world
             </div>
           </div>
         </div>
         <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
+            <h2 class="accordion-header" id="heading4">
               <button class="accordion-button" type="button" 
-              data-bs-toggle="collapse" data-bs-target="#collapseTwo" 
-              aria-expanded="true" aria-controls="collapseTwo">
+              data-bs-toggle="collapse" data-bs-target="#collapse4" 
+              aria-expanded="false" aria-controls="collapse4">
               preparation method
               </button>
             </h2>
-            <div id="collapseTwo" class=" collapse show" 
-            aria-labelledby="headingTwo" data-bs-parent="#Description">
+            <div id="collapse4" class=" collapse " 
+            aria-labelledby="heading4" data-bs-parent="#Description">
               <div class="accordion-body">
                   hello world
               </div>
@@ -231,30 +231,30 @@
 
     <div class="accordion" id="Description">
         <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
+          <h2 class="accordion-header" id="heading5">
             <button class="accordion-button" type="button" 
-            data-bs-toggle="collapse" data-bs-target="#collapseOne" 
-            aria-expanded="true" aria-controls="collapseOne">
+            data-bs-toggle="collapse" data-bs-target="#collapse5" 
+            aria-expanded="false" aria-controls="collapse5">
                 Ingredients
             </button>
           </h2>
-          <div id="collapseOne" class=" collapse show" 
-          aria-labelledby="headingOne" data-bs-parent="#Description">
+          <div id="collapse5" class=" collapse" 
+          aria-labelledby="heading5" data-bs-parent="#Description">
             <div class="accordion-body">
                 hello world
             </div>
           </div>
         </div>
         <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
+            <h2 class="accordion-header" id="heading6">
               <button class="accordion-button" type="button" 
-              data-bs-toggle="collapse" data-bs-target="#collapseTwo" 
-              aria-expanded="true" aria-controls="collapseTwo">
+              data-bs-toggle="collapse" data-bs-target="#collapse6" 
+              aria-expanded="false" aria-controls="collapse6">
               preparation method
               </button>
             </h2>
-            <div id="collapseTwo" class=" collapse show" 
-            aria-labelledby="headingTwo" data-bs-parent="#Description">
+            <div id="collapse6" class=" collapse " 
+            aria-labelledby="heading6" data-bs-parent="#Description">
               <div class="accordion-body">
                   hello world
               </div>
@@ -302,30 +302,30 @@
 
     <div class="accordion" id="Description">
         <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
+          <h2 class="accordion-header" id="heading7">
             <button class="accordion-button" type="button" 
-            data-bs-toggle="collapse" data-bs-target="#collapseOne" 
-            aria-expanded="true" aria-controls="collapseOne">
+            data-bs-toggle="collapse" data-bs-target="#collapse7" 
+            aria-expanded="false" aria-controls="collapse7">
                 Ingredients
             </button>
           </h2>
-          <div id="collapseOne" class=" collapse show" 
-          aria-labelledby="headingOne" data-bs-parent="#Description">
+          <div id="collapse7" class=" collapse " 
+          aria-labelledby="heading7" data-bs-parent="#Description">
             <div class="accordion-body">
                 hello world
             </div>
           </div>
         </div>
         <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
+            <h2 class="accordion-header" id="heading8">
               <button class="accordion-button" type="button" 
-              data-bs-toggle="collapse" data-bs-target="#collapseTwo" 
-              aria-expanded="true" aria-controls="collapseTwo">
+              data-bs-toggle="collapse" data-bs-target="#collapse8" 
+              aria-expanded="false" aria-controls="collapse8">
               preparation method
               </button>
             </h2>
-            <div id="collapseTwo" class=" collapse show" 
-            aria-labelledby="headingTwo" data-bs-parent="#Description">
+            <div id="collapse8" class=" collapse " 
+            aria-labelledby="heading8" data-bs-parent="#Description">
               <div class="accordion-body">
                   hello world
               </div>
