--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -36,25 +36,25 @@
                     <a href="www.instergram.com"><i class="fa-brands fa-instagram-square"></i></a>
                     <a href="mailto:tomer233@hotmail.com"><i class="fa-solid fa-envelope"></i></a>
                     <a href="www.youtube.com"><i class="fa-brands fa-youtube"></i></i></a>
-                </div>                
+                </div>
                 <ul class="col-xl-6 col-md-8 nav-links">
-                            <input type="checkbox" id="checkbox_toggle"/>
-                            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-                                <div class="menu">
-                                    <li><a href="#home">Home</a></li>
-                                    <li><a href="#Idea">Idea</a></li>
-                                    <li><a href="#About">About Us</a></li>
-                                    <li class="services">
-                                        <a>Recipes</a>
-                                        <ul class="dropdown1">
-                                            <li><a href="Recipes_page.html">Mexican</a></li>
-                                            <li><a href="#">Italian</a></li>
-                                            <li><a href="#">Israeli</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="Tips_page.html">Tips</a></li>
-                                    <li><a href="#">Search...</a></li>
-                                </div>
+                    <input type="checkbox" id="checkbox_toggle" />
+                    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                    <div class="menu">
+                        <li><a href="TheMasterswebsite.html">Home</a></li>
+                        <li><a href="TheMasterswebsite.html#Idea">Idea</a></li>
+                        <li><a href="TheMasterswebsite.html#About">About Us</a></li>
+                        <li class="services">
+                            <a>Recipes</a>
+                            <ul class="dropdown1">
+                                <li><a href="Mexican_page.html">Mexican</a></li>
+                                <li><a href="Italian_page.html">Italian</a></li>
+                                <li><a href="Israeli_page.html">Israeli</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="Tips_page.html">Tips</a></li>
+                        <li><a href="#">Search...</a></li>
+                    </div>
                 </ul>
             </nav>
         </div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
                     <img src="../images/Strawberry Cocktail_ Seven Year Itch.png" alt="firstmeal" style="width: 280px; height: 290px;">
-                    <h1>Coctail</h1>
+                    <h1>Cocktail</h1>
                     <p>The cocktail accompanies the meal throughout and balances all the dishes.</p>
                 </div>
             </div>
