--- a/Tips_page.html
+++ b/Tips_page.html
@@ -54,15 +54,15 @@
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#Idea">Idea</a></li>
-                        <li><a href="#About">About Us</a></li>
+                        <li><a href="TheMasterswebsite.html">Home</a></li>
+                        <li><a href="TheMasterswebsite.html#Idea">Idea</a></li>
+                        <li><a href="TheMasterswebsite.html#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
-                                <li><a href="Recipes_page.html">Mexican</a></li>
-                                <li><a href="#">Italian</a></li>
-                                <li><a href="#">Israeli</a></li>
+                                <li><a href="Mexican_page.html">Mexican</a></li>
+                                <li><a href="Italian_page.html">Italian</a></li>
+                                <li><a href="Israeli_page.html">Israeli</a></li>
                             </ul>
                         </li>
                         <li><a href="Tips_page.html">Tips</a></li>
