omri change home page

--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -64,7 +64,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                    <img class="img-me" src="images\Balsamic Steak Gorgonzola Salad with Grilled Corn.jpg">
+                    <img class="img-me" src="images\cookie-recipes1.jpg">
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                     <div class="img-me center">
