--- a/Israeli_page.html
+++ b/Israeli_page.html
@@ -46,6 +46,7 @@
             </nav>
         </div>
     </div>
+    <h1>Israel Recepies</h1>
     <H1>Starter</H1>
     <section id="head">
         <div class="container-fluid">
@@ -85,7 +86,7 @@
 
     </section>
 
-    <div class="accordion" id="Description">
+    <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" 
@@ -157,7 +158,7 @@
 
     </section>
 
-    <div class="accordion" id="Description">
+    <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading3">
             <button class="accordion-button" type="button" 
@@ -229,7 +230,7 @@
 
     </section>
 
-    <div class="accordion" id="Description">
+    <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading5">
             <button class="accordion-button" type="button" 
@@ -300,7 +301,7 @@
 
     </section>
 
-    <div class="accordion" id="Description">
+    <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading7">
             <button class="accordion-button" type="button" 
