--- a/Israeli_page.html
+++ b/Israeli_page.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Master's page</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Recipes_page.css">
+    <link rel="stylesheet" href="CSS\navbar.css">
+    <link rel="stylesheet" href="CSS\Recipes_page.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <script src="https://kit.fontawesome.com/82bc52e7cb.js" crossorigin="anonymous"></script>
@@ -40,7 +40,6 @@
                             </ul>
                         </li>
                         <li><a href="Tips_page.html">Tips</a></li>
-                        <li><a href="#">Search...</a></li>
                     </div>
                 </ul>
             </nav>
