--- a/TheMasterswebsite.html
+++ b/TheMasterswebsite.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Master's page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS\navbar.css">
+    <link rel="stylesheet" href="CSS\style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/82bc52e7cb.js" crossorigin="anonymous"></script>
     <script>
         function sendform() {
             const form = new FormData(document.getElementById('contentForm'));
-            const req = new Request('/index.php');
+            const req = new Request('PHP\index.php');
             fetch(req, {
                 method: 'POST',
                 body: form
