--- a/Tips_page.html
+++ b/Tips_page.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips Page</title>
-    <link rel="stylesheet" href="Tips_page_style.css">
+    <link rel="stylesheet" href="CSS\navbar.css">
+    <link rel="stylesheet" href="CSS\Tips_page_style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -66,7 +67,6 @@
                             </ul>
                         </li>
                         <li><a href="Tips_page.html">Tips</a></li>
-                        <li><a href="#">Search...</a></li>
                     </div>
                 </ul>
             </nav>
